# qtpanel

./: CMakeLists.txt  animationutils.h  applet.cpp  applet.h  applicationsmenuapplet.cpp  applicationsmenuapplet.h  battery.cpp  battery.h  batteryapplet.cpp  batteryapplet.h  clockapplet.cpp  clockapplet.h  demoapplet.cpp  demoapplet.h  desktopapplications.cpp  desktopapplications.h  dockapplet.cpp  dockapplet.h  dpisupport.cpp  dpisupport.h  iconloader.cpp  iconloader.h  main.cpp  panelapplication.cpp  panelapplication.h  panelapplicationsettings.ui  panelwindow.cpp  panelwindow.h  spacerapplet.cpp  spacerapplet.h  textgraphicsitem.cpp  textgraphicsitem.h  trayapplet.cpp  trayapplet.h  x11support.cpp  x11support.h
